--- a/style.css
+++ b/style.css
@@ -55,6 +55,14 @@ body {
     z-index: 2000;
 }
 
+.welcome-overlay {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .welcome-content {
     background: white;
     padding: 40px;
