--- a/style.css
+++ b/style.css
@@ -1062,3 +1062,29 @@ body {
         justify-content: center;
     }
 }
+
+
+
+
+@media print {
+    body * {
+        visibility: hidden;
+    }
+
+    #attendanceTableContainer,
+    #attendanceTableContainer * {
+        visibility: visible;
+    }
+
+    #attendanceTableContainer {
+        position: absolute;
+        left: 0;
+        top: 0;
+        width: 100%;
+    }
+
+    @page {
+        size: A4 portrait;
+        margin: 15mm;
+    }
+}
